--- a/models.html
+++ b/models.html
@@ -91,7 +91,7 @@
                     <td>Designed ergonomically for comfort during gaming.</td>
                 </tr>
                 <tr>
-                    <th>3.5mm Audio Jack:</th>
+                    <th>3.5mm Audio Jack</th>
                     <td>t has a 3.5mm audio jack for wired headphone connections.</td>
                 </tr>
             </table>
