--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                 <h1 class="h1contato">Contact us!</h1>
                 <form name="form1" action="#" method="get">
                     <input type="text" required="required" name="nome" placeholder="Name">
-                    <input type="text" required="required" name="email" placeholder="E-mail">
+                    <input type="email" required="required" name="email" placeholder="E-mail">
                     <input type="text" required="required" name="cidade" placeholder="City">
                     <textarea cols="35" rows="8" name="Obs" placeholder="Leave your comment"></textarea>
                     <div class="button-container">
