--- a/contato.html
+++ b/contato.html
@@ -34,7 +34,7 @@
                 <h1 class="h1contato">Entre em contato conosco!</h1>
                 <form name="form1" action="#" method="get">
                     <input type="text" required="required" name="nome" placeholder="Nome">
-                    <input type="text" required="required" name="email" placeholder="E-mail">
+                    <input type="email" required="required" name="email" placeholder="E-mail">
                     <input type="text" required="required" name="cidade" placeholder="Cidade">
                     <textarea cols="35" rows="8" name="Obs" placeholder="Deixe sua observação"></textarea>
                     <div class="button-container">
