--- a/models.html
+++ b/models.html
@@ -92,7 +92,7 @@
                 </tr>
                 <tr>
                     <th>3.5mm Audio Jack</th>
-                    <td>t has a 3.5mm audio jack for wired headphone connections.</td>
+                    <td>It has a 3.5mm audio jack for wired headphone connections.</td>
                 </tr>
             </table>
 
